# libtorchmnist

./: .gitignore  CMakeLists.txt  README.md
source/: CMakeLists.txt
source/applications/: CMakeLists.txt
source/applications/mnist/: CMakeLists.txt  main.cpp  main.h  main.h.in
source/libraries/: CMakeLists.txt
source/libraries/DigitsRecognition/: CMakeLists.txt
source/libraries/DigitsRecognition/TorchImplementation/: CMakeLists.txt  TorchImplementation.cpp  TorchImplementation.h  TorchNetwork.cpp  TorchNetwork.h  TorchNetwork_test.cpp
